[package]
name = "imlove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
cen = { path = "../cen" }
ash = "0.38.0"
bytemuck = "1.21.0"
egui = "0.30.0"
egui_dock = "0.16"
gpu-allocator = "0.27.0"
glam = { version = "0.29.2", features = ["bytemuck"] }
ordered-float = "4.6.0"
rand = "0.8.5"
slotmap = "1.0.7"
