[package]
name = "imlove"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
cen = { path = "../cen" }
#cen = "0.0.6"
ash = "0.38.0"
egui = "0.30.0"
egui_dock = "0.15"
image = { version = "0.25", features = ["png"] }